--- a/AtkTennisWeb/Views/Public/GetCabinetDebt.cshtml
+++ b/AtkTennisWeb/Views/Public/GetCabinetDebt.cshtml
@@ -120,7 +120,7 @@
                                             <td>@item.DuesYear</td>
                                             <td>@item.Explain</td>
 
-                                            @if (@item.PriceCondition)
+                                            @if (item.PriceCondition)
                                             {
                                                 <td>Ödendi</td>
                                             }
