--- a/AtkTennisWeb/Views/AdminHome/MultiReservationCancel.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/MultiReservationCancel.cshtml
@@ -1,4 +1,15 @@
 ﻿
+@using Microsoft.AspNetCore.Http;
+@inject IHttpContextAccessor HttpContextAccessor;
+
+
+@{
+    var currentUserId = HttpContextAccessor.HttpContext.Session.GetString("UserId");
+    var compId = HttpContextAccessor.HttpContext.Session.GetString("CompId");
+}
+
+<h2 style="display:none" id="currentUserId">@currentUserId</h2>
+<h2 style="display:none" id="compId">@compId</h2>
 
 <div class="content-wrapper">
     <section class="content-header">
@@ -64,7 +75,7 @@
                             </div>
                         </div>
 
-                       
+
 
                         <div id="appendResInf">
 
@@ -130,14 +141,15 @@
         }).buttons().container().appendTo('#example2_wrapper .col-md-6:eq(0)');
 
 
-       
+
 
         findMember();
     });
+    var compId = $("#compId").text();
 
     function findMember() {
 
-      
+
 
         $.ajax({
             type: "Get",
@@ -148,9 +160,14 @@
             success: function (res) {
 
                 var mem = [];
+        
 
                 for (var i = 0; i < res.memberLists.length; i++) {
-                    mem.push(res.memberLists[i].memberNumber + ' - ' + res.memberLists[i].fullName + ' - ' + res.memberLists[i].nickName);
+
+                    if (res.memberLists[i].companyId == compId) {
+                        mem.push(res.memberLists[i].memberNumber + ' - ' + res.memberLists[i].fullName + ' - ' + res.memberLists[i].nickName);
+                    }
+                    
                 }
 
 
@@ -159,13 +176,18 @@
 
 
                     var checkRole = Enumerable.from(res.memberLists)
-                        .where(function (x) { return x.role.toLowerCase() == res.courtScales[i].name.toLowerCase() })
+                        .where(function (x) { return x.role.toLowerCase() == res.courtScales[i].name.toLowerCase() && x.companyId == compId })
                         .select(function (x) { return x }).toArray();
 
-                    if (checkRole.length == 0) {
-                        mem.push(res.courtScales[i].code + ' - ' + res.courtScales[i].name);
-                    }
 
+                    if (checkRole.length == 0) {
+
+                        if (res.courtScales[i].companyId == compId) {
+
+                            mem.push(res.courtScales[i].code + ' - ' + res.courtScales[i].name);
+                        }
+                      
+                    }
 
                 }
 
@@ -188,7 +210,7 @@
     function findAllRes() {
 
 
-
+       
         var userName = $("#findMember").val();
         var startDate = $("#dateStart").val();
         var finishDate = $("#dateFinish").val();
@@ -207,6 +229,7 @@
 
             alert("Lütfen Bilgileri Eksiksiz Giriniz !!");
         }
+
         else {
             $.ajax({
                 type: "Get",
@@ -217,7 +240,7 @@
                 async: true,
                 success: function (res) {
 
-              
+                    debugger;
 
                     if (res != "false") {
 
@@ -259,56 +282,57 @@
                         row += '<th>İşlemler</th>';
                         row += '</tr>';
                         row += '</thead>';
-
+                        row += '<tbody>';
 
 
 
                         for (var i = 0; i < res.length; i++) {
 
-                            row += '<tbody>';
-                            row += '<tr style="text-align:center" id="">';
-                            row += '<td>' + res[i].resId + '</td>';
-                            row += '<td>' + res[i].resDate + '</td>';
-                            row += '<td>' + res[i].resStartTime + "-" + res[i].resFinishTime + '</td>';
-                            row += '<td>' + res[i].courtId + '</td>';
+                            if (res[i].companyId == compId) {
+                               
+                                row += '<tr style="text-align:center" id="">';
+                                row += '<td>' + res[i].resId + '</td>';
+                                row += '<td>' + res[i].resDate + '</td>';
+                                row += '<td>' + res[i].resStartTime + "-" + res[i].resFinishTime + '</td>';
+                                row += '<td>' + res[i].court.courtName + '</td>';
 
-                            if (res[i].priceInf == true) {
-                                row += '<td>' + "Ödendi" + '</td>';
+                                if (res[i].priceInf == true) {
+                                    row += '<td>' + "Ödendi" + '</td>';
+                                }
+                                else {
+                                    row += '<td>' + "Ödenmedi" + '</td>';
+                                }
+
+                                row += '<td>';
+                                row += '<div class="custom-control custom-switch">';
+
+                                debugger;
+
+                                if (new Date(res[i].resDate) < new Date(today)) {
+
+                                    row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" disabled="true" id="' + res[i].resId + '">';
+                                    row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
+
+                                }
+
+                                else if (new Date(res[i].resDate) == new Date(today)) {
+
+                                    row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" disabled="true" id="' + res[i].resId + '">';
+                                    row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
+
+                                }
+
+                                else {
+                                    row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" id="' + res[i].resId + '">';
+                                    row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
+                                }
+
+                                row += '</div>';
+                                row += '</td>';
+                                row += '</tr>';
+                               
                             }
-                            else {
-                                row += '<td>' + "Ödenmedi" + '</td>';
-                            }
-
-                            row += '<td>';
-                            row += '<div class="custom-control custom-switch">';
-
-                            debugger;
-
-                            if (new Date(res[i].resDate) < new Date(today)) {
-
-                                row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" disabled="true" id="' + res[i].resId + '">';
-                                row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
-                                
-                            }
-
-                            else if (new Date(res[i].resDate) == new Date(today)) {
-
-                                row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" disabled="true" id="' + res[i].resId + '">';
-                                row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
-
-                            }
-
-                            else {
-                                row += '<input type="checkbox" class="custom-control-input" style="cursor:pointer" id="' + res[i].resId + '">';
-                                row += '<label class="custom-control-label" for="' + res[i].resId + '"></label>';
-                            }
-                          
-                            row += '</div>';
-                            row += '</td>';
-                            row += '</tr>';
                             row += '</tbody>';
-
-
 
                         }
 
@@ -332,13 +356,9 @@
                         row += '</div>';
 
                         $("#appendResInf").append(row);
-
-
-
                     }
 
                     else {
-
 
                         $("#appendResInf").empty();
 
@@ -346,7 +366,7 @@
                     }
 
 
-                  
+
 
                 },
 
@@ -356,22 +376,20 @@
                 }
             });
         }
-     
+
     }
 
     function checkedAll(element) {
 
-        if (element.checked ) {
-        
-            $('#resList input[type=checkbox]:not(:disabled)').prop('checked' , true);
+        if (element.checked) {
+
+            $('#resList input[type=checkbox]:not(:disabled)').prop('checked', true);
         }
         else {
 
             $('#resList input[type=checkbox]:not(:disabled)').prop('checked', false);
         }
     }
-
-
 
     function cancelAllRes() {
 
@@ -382,8 +400,8 @@
         var idLists = "";
 
         $('#resList input:checked:not(:disabled)').each(function () {
-  
-              idList.push(this.id);
+
+            idList.push(this.id);
         });
 
         newStr = "";
@@ -399,7 +417,7 @@
             }
         }
 
-     
+
 
         $.ajax({
             type: "GET",
@@ -413,7 +431,7 @@
                 debugger;
 
 
-                if (res != "true" ) {
+                if (res != "true") {
 
                     $.confirm({
                         title: "Rezervasyon Tarihi Geçmiş Rezervasyonlar Silinemez /Yada/  Lütfen Seçim Yapınız",
@@ -446,7 +464,7 @@
                 console.log(textStatus);
             }
         });
-     
+
     }
 
 </script>
